--- a/style.css
+++ b/style.css
@@ -6,28 +6,28 @@ body {
   margin: 0;
 }
 
-.aaa {
+.preview {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.preview img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.preview .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .preview {
   text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
