--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ ul {
   padding: 0px;
 }
 
-li,
-h3 {
+h3,
+li {
   list-style: none;
 }
 
-input,
-button {
+button,
+input {
   outline: none;
 }
 
