refactor: formatting according to rule 2.1 (BEM) in html-and-css-and-js

--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@
   margin: 0 auto 0;
 }
 
-.task {
+.main__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.main__task-row-wrapper {
   display: flex;
 }
 
@@ -81,7 +81,7 @@ button:hover {
 /* Heading */
 h1,
 h2,
-label[for="new-task"] {
+label[for="new-main__task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -109,12 +109,12 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="new-main__task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+input#new-main__task {
   width: 318px;
 }
 
@@ -152,17 +152,17 @@ li>input[type="text"] {
   width: 226px;
 }
 
-li>button.delete:hover {
+li>button.main__delete:hover {
   color: #cf2323;
 }
 
-button.delete img {
+button.main__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+button.main__delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -177,11 +177,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+ul li.main__edit-mode input[type=text] {
   display: inline-block;
   width: 330px;
 }
 
-ul li.edit-mode label {
+ul li.main__edit-mode label {
   display: none;
 }
