refactor: rule (text-decoration: line-through;)

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ li>.main__button.main__delete:hover {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through;
+  text-decoration: line-through red;
   color: #888;
 }
 
